--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <div class="card mb-4 shadow-sm">
                   <div class="card-body">
                     <h5 class="card-title">Automate</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Information flows are becoming a key resource. BlackGull increases situational awareness along the supply chain, allowing firms to access and transfer real-time info, in an efficient, reliable and secure way.
+.</p>
                   </div>
                 </div>
               </div>
