--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                   <div class="card-body">
-                    <h5 class="card-title">Automate</h5>
+                    <h5 class="card-title">Communicate</h5>
                     <p class="card-text">Information flows are becoming a key resource. BlackGull increases situational awareness along the supply chain, allowing firms to access and transfer real-time info, in an efficient, reliable and secure way.
 .</p>
                   </div>
