--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 <div class="card mb-4 shadow-sm">
                   <div class="card-body">
                     <h5 class="card-title">Collaborate</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Plug-and-play business collaborations among SMEs, while highly beneficial, are very difficult to set up, execute and monitor. Smart-contract powered interactions make it possible to generate and distribute value as never before.
+.</p>
                   </div>
                 </div>
               </div>
@@ -86,7 +87,7 @@
                 <div class="card mb-4 shadow-sm">
                   <div class="card-body">
                     <h5 class="card-title">Innovate</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">BlackGull functions as a tool for constant business model innovation. By recombining their partnerships in flexible ways, SMEs can quickly adapt to business cycles and demand variability in the supply chain.</p>
                   </div>
                 </div>
               </div>
